[package]
name = "no"
version = "0.1.0"
edition = "2021"
build = "build.rs"
default-run = "no"

[dependencies]
serde = { version = "1.0.213", features = ["derive"] } # settings
toml = "0.8.19" # settings
webp = "0.3.0" # webp
image-webp = "0.1.3" # webp
image = { version = "0.25.4", features = ["webp"] } # webp
walkdir = "2.5.0" # webp
profiling-procmacros = "1.0.15" #webp

# WARNING: TURN OFF dynamic_linking to build release
bevy = { version = "0.14.2", features = ["dynamic_linking", "webp"] } # cargo run
# bevy = { version = "0.14.2", features = ["webp"] } # cargo build --release

[[bin]]
name = "no"
path = "src/main.rs"

[[bin]]
name = "forge"
path = "forge.rs"

[build-dependencies]
embed-resource = "1.8"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
